Version 0.4.2 (?? ??? 2007)
 - Added support for STATUS field in Event and Journal classes.
Version 0.4.1 (12 Jun 2007)
 - Modified CalendarPanel code to work with Java 1.2 (removed generics)
 - Added new CSVParser to parse CSV calendar data created from MS Outlook.
Version 0.4.0 (11 Jun 2007)
 - Added new CalendarPanel Swing GUI component to package.
 - Updated build.xml with new targets for packaging source ("source-zip"),
   building javadoc HTML files ("javadoc").
Version 0.3.0 (30 May 2007)
 - Added Google's RRULE java implementation for generating recurrance dates.
 - Numerous bugfixes for recurrance (RRULE)
 - Added getDayOfWeek, getFirstDayOfWeekForYear, getLastDayOfWeekForYear
   to Utils class
 - Added getWeekOfYear, getDayOfYear, getDayOfWeek, isBefore, isAfter
   methods to Date object
 - Added setUserData/getUserData methods to Event class
 - Added support for timezones for all date objects by including
   Joda Time (www.joda.org)
 - Added support for comment and location for events.
 - Fixed duration in event
Version 0.2.6 (24 Apr 2007)
  - k5njournal changes:
    + replaced "Clear" button for text search with graphic icon
Version 0.2.5 (24 Apr 2007)
  - k5njournal changes:
    + Added text search filter
    + Added export to ics in "File" menu
    + fixed bug: clicking on journal list column headers to sort
      was causing wrong entry to be displayed if you selected one.
Version 0.2.4 (18 Apr 2007)
  - k5njournal changes:
    + in entry descriptions, wrap text at word boundaries (view/edit)
    + don't NullPointerException when data file is missing DTSTART values
    + default to Windows look and feel
Version 0.2.3 (18 Apr 2007)
  - Fix k5njournal bug: JTree was not refreshing to show newly added dates
Version 0.2.2 (17 Apr 2007)
  - Fix for k5njournal (NullPointerException if no journal entries yet)
Version 0.2.1 (16 Apr 2007)
  - Fix for k5njournal used with Java 1.4
Version 0.2.0 (16 Apr 2007)